# openzfs-fork

./: META  Makefile.am  configure.ac
.github/workflows/: macos-build.yaml  macos-build.yml
cmd/: Makefile.am  arcstat.in
cmd/arc_summary/: arc_summary3
cmd/arcstat/: arcstat.in
cmd/mount_zfs/: mount_zfs.c
cmd/os/macos/zfs_util/: Makefile.am  zfs_util.c
cmd/zdb/: zdb.c
cmd/zed/: Makefile.am
cmd/zed/zed.d/: Makefile.am  zvol_create.sh  zvol_remove.sh
cmd/zfs/: zfs_main.c
cmd/zpool/: Makefile.am  zpool_vdev.c
cmd/zpool_influxdb/: zpool_influxdb.c
cmd/zstream/: zstream_recompress.c
config/: Rules.am  always-compiler-options.m4  kernel.m4  user.m4  zfs-build.m4
etc/: Makefile.am
etc/launchd/: Makefile.am
etc/launchd.d/: Makefile.am  zpool-import-all.sh.in
etc/launchd/daemons/: Makefile.am
etc/launchd/launchd.d/: Makefile.am  zpool-import-all.sh.in
etc/paths.d/: Makefile.am
include/: libzfs.h  libzutil.h
include/sys/: abd.h  abd_impl.h  dnode.h  spa.h  spa_impl.h  vdev_raidz.h  zfs_context.h  zfs_ioctl_impl.h  zfs_sa.h  zfs_znode.h  zio.h  zio_crypt.h
include/sys/crypto/: icp.h
include/sys/fs/: zfs.h
lib/: Makefile.am
lib/libicp/: Makefile.am
lib/libspl/: atomic.c
lib/libspl/include/: Makefile.am  assert.h
lib/libzfs/: Makefile.am  libzfs.abi  libzfs_crypto.c  libzfs_dataset.c  libzfs_diff.c  libzfs_impl.h  libzfs_iter.c  libzfs_pool.c  libzfs_sendrecv.c  libzfs_util.c
lib/libzfs_core/: Makefile.am  libzfs_core.c
lib/libzfsbootenv/: lzbe_device.c
lib/libzpool/: Makefile.am  taskq.c
lib/libzutil/: Makefile.am  zutil_import.c
module/: Kbuild.in  Makefile.bsd  Makefile.in
module/icp/core/: kcf_mech_tabs.c  kcf_prov_tabs.c  kcf_sched.c
module/lua/: ldo.c  lgc.c  llex.c  lstrlib.c  ltable.c
module/nvpair/: nvpair_alloc_spl.c
module/zcommon/: zfeature_common.c  zfs_fletcher.c  zfs_prop.c  zprop_common.c
module/zfs/: abd.c  arc.c  dbuf.c  dmu.c  dmu_zfetch.c  dnode.c  dsl_crypt.c  dsl_pool.c  dsl_prop.c  dsl_scan.c  metaslab.c  spa.c  spa_errlog.c  spa_misc.c  vdev_label.c  vdev_raidz_math.c  vdev_raidz_math_aarch64_neonx2.c  vdev_raidz_math_scalar.c  zfs_fuid.c  zfs_ioctl.c  zfs_log.c  zfs_replay.c  zfs_sa.c  zfs_vnops.c  zio.c  zvol.c
scripts/: cmd-macos.sh  pkg_macos.sh  zfs-tests.sh
(+117 files in other folders)
